gateway-api-templates/gateway-class.yaml
#cluster-wide gatewayclass definitono

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass 
metadata:
  name: istio-trino-class
spec:
  controllerName: istio.o/gateway-controller
