gateway-api-templates/trino-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway 
metadata:
  name: trino-external-gateway 
  namespace: gateway-system 
spec:
  gatewayClasName: istio-trino-class
  listeners:
  - name: http 
    protocol: HTTP 
    port: 80 
    allowedRoutes:
      namespaces:
        from: Selector 
        selector: 
          matchLabels:
            kubernetes.io/metadata.name: trino-ftr
