gateway-api-templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trino-api-route
  namespace: trino-ftr
spec:
  parentRefs:
  - name: trino-external-gateway
    namespace: gateway-system
  
  hostnames:
  - "trino.example.com"

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    
    backendRefs:
    - name: trino
      port: 8080
